--- a/apps/store/project.json
+++ b/apps/store/project.json
@@ -3,6 +3,7 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/store/src",
   "projectType": "application",
+  "tags": [],
   "targets": {
     "deploy": {
       "dependsOn": ["build"],
@@ -95,16 +96,8 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "apps/store/jest.config.ts",
-        "passWithNoTests": true
-      },
-      "configurations": {
-        "ci": {
-          "ci": true,
-          "codeCoverage": true
-        }
+        "jestConfig": "apps/store/jest.config.ts"
       }
     }
-  },
-  "tags": []
+  }
 }
