--- a/package.json
+++ b/package.json
@@ -14,33 +14,33 @@
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "17.0.1",
-    "@nx/devkit": "17.0.1",
-    "@nx/eslint-plugin": "17.0.1",
-    "@nx/jest": "17.0.1",
-    "@nx/js": "17.0.1",
-    "@nx/linter": "17.0.1",
-    "@nx/playwright": "17.0.1",
-    "@nx/react": "17.0.1",
-    "@nx/web": "17.0.1",
-    "@nx/webpack": "17.0.1",
-    "@nx/workspace": "17.0.1",
+    "@nx/cypress": "18.3.5",
+    "@nx/devkit": "18.3.5",
+    "@nx/eslint-plugin": "18.3.5",
+    "@nx/jest": "18.3.5",
+    "@nx/js": "18.3.5",
+    "@nx/linter": "18.3.5",
+    "@nx/playwright": "18.3.5",
+    "@nx/react": "18.3.5",
+    "@nx/web": "18.3.5",
+    "@nx/webpack": "18.3.5",
+    "@nx/workspace": "18.3.5",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "~1.6.7",
+    "@swc-node/register": "1.8.0",
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@testing-library/react": "14.0.0",
     "@types/jest": "^29.4.0",
-    "@types/node": "18.14.2",
+    "@types/node": "18.19.9",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
-    "@typescript-eslint/eslint-plugin": "^5.60.1",
-    "@typescript-eslint/parser": "^5.60.1",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
     "babel-jest": "^29.4.1",
-    "cypress": "^13.0.0",
-    "eslint": "~8.46.0",
+    "cypress": "^13.6.6",
+    "eslint": "8.57.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
@@ -51,12 +51,12 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "netlify-cli": "^16.6.1",
-    "nx": "17.0.1",
+    "nx": "18.3.5",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3",
+    "typescript": "5.4.5",
     "url-loader": "^4.1.1"
   }
 }
