--- a/package.json
+++ b/package.json
@@ -5,41 +5,41 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "@swc/helpers": "~0.5.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@swc/helpers": "0.5.13",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-router-dom": "6.11.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "18.3.5",
-    "@nx/devkit": "18.3.5",
-    "@nx/eslint-plugin": "18.3.5",
-    "@nx/jest": "18.3.5",
-    "@nx/js": "18.3.5",
-    "@nx/linter": "18.3.5",
-    "@nx/playwright": "18.3.5",
-    "@nx/react": "18.3.5",
-    "@nx/web": "18.3.5",
-    "@nx/webpack": "18.3.5",
-    "@nx/workspace": "18.3.5",
+    "@nx/cypress": "19.8.3",
+    "@nx/devkit": "19.8.3",
+    "@nx/eslint-plugin": "19.8.3",
+    "@nx/jest": "19.8.3",
+    "@nx/js": "19.8.3",
+    "@nx/linter": "19.8.3",
+    "@nx/playwright": "19.8.3",
+    "@nx/react": "19.8.3",
+    "@nx/web": "19.8.3",
+    "@nx/webpack": "19.8.3",
+    "@nx/workspace": "19.8.3",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@svgr/webpack": "^8.0.1",
-    "@swc-node/register": "1.8.0",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.85",
-    "@testing-library/react": "14.0.0",
-    "@types/jest": "^29.4.0",
+    "@swc-node/register": "1.9.2",
+    "@swc/cli": "0.3.14",
+    "@swc/core": "1.5.7",
+    "@testing-library/react": "15.0.6",
+    "@types/jest": "29.5.13",
     "@types/node": "18.19.9",
-    "@types/react": "18.2.24",
-    "@types/react-dom": "18.2.9",
-    "@typescript-eslint/eslint-plugin": "7.9.0",
-    "@typescript-eslint/parser": "7.9.0",
-    "babel-jest": "^29.4.1",
-    "cypress": "^13.6.6",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "7.18.0",
+    "@typescript-eslint/parser": "7.18.0",
+    "babel-jest": "29.7.0",
+    "cypress": "13.15.0",
     "eslint": "8.57.1",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.13.4",
@@ -48,15 +48,15 @@
     "eslint-plugin-playwright": "^0.15.3",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "netlify-cli": "^16.6.1",
-    "nx": "18.3.5",
+    "nx": "19.8.3",
     "prettier": "^2.6.2",
     "react-refresh": "^0.10.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.4.5",
+    "typescript": "5.5.4",
     "url-loader": "^4.1.1"
   }
 }
