--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nx/eslint-plugin": "19.8.3",
     "@nx/jest": "19.8.3",
     "@nx/js": "19.8.3",
-    "@nx/linter": "19.8.3",
+    "@nx/eslint": "19.8.3",
     "@nx/playwright": "19.8.3",
     "@nx/react": "19.8.3",
     "@nx/web": "19.8.3",
@@ -41,7 +41,7 @@
     "babel-jest": "29.7.0",
     "cypress": "13.15.0",
     "eslint": "8.57.1",
-    "eslint-config-prettier": "8.1.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-cypress": "^2.13.4",
     "eslint-plugin-import": "2.27.5",
     "eslint-plugin-jsx-a11y": "6.7.1",
