--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -69,7 +69,7 @@
       }
     },
     "lint": {
-      "executor": "@nx/linter:eslint",
+      "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": ["apps/shell/**/*.{ts,tsx,js,jsx}"]
