--- a/package.json
+++ b/package.json
@@ -16,17 +16,22 @@
     "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "19.8.3",
     "@nx/devkit": "19.8.3",
+    "@nx/eslint": "19.8.3",
     "@nx/eslint-plugin": "19.8.3",
     "@nx/jest": "19.8.3",
     "@nx/js": "19.8.3",
-    "@nx/eslint": "19.8.3",
     "@nx/playwright": "19.8.3",
     "@nx/react": "19.8.3",
+    "@nx/rspack": "^19.8.0",
     "@nx/web": "19.8.3",
-    "@nx/webpack": "19.8.3",
     "@nx/workspace": "19.8.3",
     "@playwright/test": "^1.36.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "@rspack/cli": "1.0.5",
+    "@rspack/core": "1.0.5",
+    "@rspack/dev-server": "1.0.5",
+    "@rspack/plugin-minify": "^0.7.5",
+    "@rspack/plugin-react-refresh": "^1.0.0",
     "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "1.9.2",
     "@swc/cli": "0.3.14",
@@ -53,7 +58,7 @@
     "netlify-cli": "^16.6.1",
     "nx": "19.8.3",
     "prettier": "^2.6.2",
-    "react-refresh": "^0.10.0",
+    "react-refresh": "~0.14.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "5.5.4",
